🏗️ 重构项目结构：将应用文件移至根目录
✅ 项目结构优化:
- 将 q-coach-app/ 子目录内容移动到根目录
- 删除多余的嵌套目录结构
- 更新 .gitignore 为标准 Next.js 配置
- 简化开发和部署流程

🔧 技术改进:
- 统一项目根目录结构
- 消除目录混淆问题
- 优化 git 仓库组织
- 提升开发体验

📦 文件变更:
- 移动所有源代码到根目录
- 保留完整的应用功能
- 维护所有依赖和配置

现在项目结构更加清晰，可以直接在根目录运行 npm run dev 🚀

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,44 @@
-# Dependencies
-node_modules/
-*/node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Production builds
-*/build/
-*/.next/
-*/out/
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-*/.env
-*/.env.local
-*/.env.development.local
-*/.env.test.local
-*/.env.production.local
+# testing
+/coverage
 
-# Logs
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-*.log
+.pnpm-debug.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# env files (can opt-in for committing if needed)
+.env*
 
-# Coverage directory used by tools like istanbul
-coverage/
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
 # IDE
 .vscode/
@@ -41,23 +47,9 @@ coverage/
 *.swo
 
 # OS generated files
-.DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
 ehthumbs.db
 Thumbs.db
-
-# Next.js specific
-**/.next/
-**/out/
-
-# Vercel
-.vercel
-
-# TypeScript
-*.tsbuildinfo
-
-# Package-lock files (可选，根据团队偏好)
-# package-lock.json 
